# vonkarman

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.wolf/: anatomy.md  cerebrum.md  memory.md
benchmarks/: .gitignore  README.md  requirements.txt  run_all.py
benchmarks/dedalus/: activate.sh  parse_output.py  run_tg.py  setup.sh
benchmarks/hit3d/: build.sh  d0000.txt  es.gp  parse_output.py  run.sh  stat1.gp  stat2.gp  tg_re01600.in
benchmarks/reference_data/: brachet1983.csv  vanrees2011.csv
benchmarks/spectraldns/: activate.sh  parse_output.py  run_tg.py  setup.sh
benchmarks/turbogenpy/: run_spectrum.py  setup.sh
benchmarks/vonkarman/: parse_output.py  run_tg.sh  run_tg_gpu.sh  tg_re1600.toml  tg_re1600_n256.toml
docs/superpowers/plans/: 2026-04-08-cufft-backend.md
docs/superpowers/specs/: 2026-04-08-cufft-backend-design.md
vonkarman-bin/: Cargo.toml
vonkarman-bin/src/: config.rs  diagnostics_writer.rs  main.rs  run.rs  validate.rs
vonkarman-bin/tests/: cli_run.rs
vonkarman-core/: Cargo.toml
vonkarman-core/src/: complex.rs  domain.rs  field.rs  float.rs  kahan.rs  lib.rs  spectral_ops.rs
vonkarman-diag/: Cargo.toml
vonkarman-diag/src/: audit.rs  lib.rs  scalar.rs  spectrum.rs
vonkarman-fft/: Cargo.toml
vonkarman-fft/src/: backend.rs  cufft.rs  dealiased.rs  gpufft_backend.rs  lib.rs  ndrustfft_backend.rs  select.rs
vonkarman-io/: Cargo.toml
vonkarman-io/src/: checkpoint.rs  lib.rs  snapshot.rs
vonkarman-periodic/: Cargo.toml
vonkarman-periodic/src/: etd.rs  lib.rs  nonlinear.rs  rk4.rs  solver.rs
vonkarman-periodic/src/ic/: abc.rs  anti_parallel.rs  kida_pelz.rs  mod.rs  random_isotropic.rs  taylor_green.rs
vonkarman-periodic/tests/: checkpoint_restart.rs  convergence.rs  energy_budget.rs  reference_data.rs  taylor_green_re100.rs
