[workspace]
members = [
    "vonkarman-core",
    "vonkarman-fft",
    "vonkarman-periodic",
    "vonkarman-diag",
    "vonkarman-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/alejandro-soto-franco/vonkarman"

[workspace.dependencies]
vonkarman-core = { path = "vonkarman-core" }
vonkarman-fft = { path = "vonkarman-fft" }
vonkarman-periodic = { path = "vonkarman-periodic" }
vonkarman-diag = { path = "vonkarman-diag" }
ndarray = { version = "0.16", features = ["rayon"] }
num-complex = "0.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
