[package]
name = "vonkarman-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for the vonkarman solver"

[[bin]]
name = "vonkarman"
path = "src/main.rs"

[dependencies]
vonkarman-core = { workspace = true }
vonkarman-fft = { workspace = true }
vonkarman-periodic = { workspace = true }
vonkarman-diag = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
vonkarman-io = { workspace = true }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
arrow = { version = "55", default-features = false }
parquet = { version = "55", features = ["arrow"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
