[package]
name = "vonkarman-diag"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Diagnostics pipeline for the vonkarman solver"

[dependencies]
vonkarman-core = { workspace = true }
ndarray = { workspace = true }
num-complex = { workspace = true }
serde = { workspace = true }
