[package]
name = "vonkarman-fft"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFT backends for the vonkarman solver"

[dependencies]
vonkarman-core = { workspace = true }
ndarray = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }
ndrustfft = "0.5"
libloading = "0.8"
thiserror = "2"
tracing = "0.1"
